--- a/app/css/layout/layout.styl
+++ b/app/css/layout/layout.styl
@@ -92,6 +92,7 @@ md-input-container
 
   /* SECTION 0NE */
   .section-one
+    padding 80px 0 20px !important
     background-color white
     a
       color danger
