--- a/app/css/main.css
+++ b/app/css/main.css
@@ -533,7 +533,7 @@ audio:not([controls]),
   fon-size: 18px;
 }
 .title-middle-line {
-  height: 100px;
+  height: 80px;
   text-align: center;
   position: relative;
   color: #000;
@@ -783,7 +783,7 @@ audio:not([controls]),
   background-position: center;
   background-size: 100%;
   background-repeat: no-repeat;
-  height: 600px;
+  height: 400px;
 }
 .tab-simple {
   border: 1px solid #ddd;
@@ -1085,6 +1085,14 @@ figure.effect-sadie:hover a {
 }
 .comments-user .branchoffice-comment small {
   float: right;
+}
+.label-danger {
+  position: absolute;
+  top: 15px;
+  background-color: #d84c4c;
+  padding: 5px;
+  color: #fff !important;
+  font-size: 12px;
 }
 .block-ui-overlay {
   width: 100%;
@@ -1946,6 +1954,7 @@ md-input-container {
   padding: 80px 0;
 }
 #home .section-one {
+  padding: 80px 0 20px !important;
   background-color: #fff;
 }
 #home .section-one a {
