ajuste en template de account user

--- a/app/css/layout/layout.styl
+++ b/app/css/layout/layout.styl
@@ -189,6 +189,15 @@ md-input-container
 
 /* ------ TEMP DASHBOARD STYLE ----- */
 .temp-dashboard
+  .nav-link 
+    text-align right
+    padding 0 10px
+    color fontClr
+  .jumbotron 
+    background-color white  
+    padding 5px
+    .text-right 
+      color danger
   .search-bar
     margin-bottom 20px
   .items-dashboard
@@ -200,6 +209,7 @@ md-input-container
         border-right none
   .list-group
     border-right 1px solid rgba(0, 0, 0, 0.125)
+    height 100%
     .list-group-item
       border none
       color fontClr
@@ -416,3 +426,4 @@ footer
   md-content
     &._md
       max-height 240px
+      
