--- a/app/templates/auth/dashboard.html
+++ b/app/templates/auth/dashboard.html
@@ -7,13 +7,15 @@
                 </div>
                 <div class="col-md-9">
                     <div class="row">
-                        <div class="col-6 col-md-5">
+                        <div class="col-4 col-md-5">
                             <h5><i class="fa fa-user"></i> {{user.username}}</h5>
                         </div>
-                        <div class="col-6 text-right">
-                            <span>Mis compras ({{ Panel.purchasesCount }})</span>
-                            <span>Pagos pendientes ({{ Panel.pending }})</span>
-                            <span>En proceso ({{ Panel.processing }})</span>
+                        <div class="col-8 col-md-7 text-right">
+                            <ul class="nav justify-content-end">
+                                <li class="nav-item"><a class="nav-link" href="#"> Mis compras ({{ Panel.purchasesCount }})</a></li>
+                                <li class="nav-item"><a class="nav-link" href="#"> Pagos pendientes ({{ Panel.pending }})</a></li>
+                                <li class="nav-item"><a class="nav-link" href="#"> En proceso ({{ Panel.processing }})</a></li>
+                            </ul>
                         </div>
                     </div>
                     <hr class="clearfix">
@@ -21,16 +23,22 @@
                     <div class="row">
                         <!--TODO: Mostrar últimas 3 compras realizadas-->
                         <div class="col-md-12">
-                            <h4>Mis compras recientes</h4>
-                            <br>
+                            <div class="row jumbotron">
+                                <div class="col-sm-6">
+                                    <h4>Mis compras recientes</h4>
+                                </div>
+                                <div class="col-sm-6 text-right">
+                                    <h4>Balance: {{ Panel.customer.balance}}</h4>
+                                </div>
+                            </div>
                         </div>
                         <div class="table-responsive col-md-12" loading-container="Panel.tableParams.settings().$loading">
                             <table class="table table-bordered bg-white table-striped" ng-table="Panel.tableParams"
                                 show-filter="false">
                                 <tbody>
                                     <tr ng-repeat="purchase in Panel.purchaseRecent" datasource="purchase" ref="Panel">
-                                        <td data-title="'Folio'" ng-if="purchase.id" sortable="'id'">#{{ purchase.id }}</td>
-                                        <td data-title="'Folio'" ng-if="!purchase.id" sortable="'id'">#{{ purchase.idCode }}</td>
+                                        <td data-title="'Folio'" ng-if="purchase.code" sortable="'id'">#{{ purchase.code }}</td>
+                                        <td data-title="'Folio'" ng-if="!purchase.code" sortable="'id'">#{{ purchase.id }}</td>
                                         <td data-title="'Fecha'" sortable="'name'">{{ purchase.createdAt | date:
                                             'd/M/y'}}
                                         </td>
