change product-detail style

--- a/app/css/layout/layout.styl
+++ b/app/css/layout/layout.styl
@@ -80,7 +80,15 @@ md-input-container
       &:nth-child(2), &:nth-child(6)
         display inline !important
 
-
+.unavailable
+  margin 15px 0
+  span
+    font-size 13px
+    background-color #e13838
+    padding 5px
+    opacity 0.8
+    color white
+    font-weight bold
 
 /* ------ HOME STYLE ----- */
 #home
@@ -163,7 +171,7 @@ md-input-container
       border 1px solid black  
   .bg-image-single
     background-size cover
-    background-position center
+    background-position bottom
     height 600px
   .box-description-detail-product
     padding 60px 0
