--- a/app/css/main.css
+++ b/app/css/main.css
@@ -2046,6 +2046,17 @@ md-input-container {
 .three-rows-nav .social .list-icons-add:nth-child(6) {
   display: inline !important;
 }
+.unavailable {
+  margin: 15px 0;
+}
+.unavailable span {
+  font-size: 13px;
+  background-color: #e13838;
+  padding: 5px;
+  opacity: 0.8;
+  color: #fff;
+  font-weight: bold;
+}
 #home .section-one,
 #home .section-two,
 #home .section-four,
@@ -2132,7 +2143,7 @@ md-input-container {
 .temp-product-detail .bg-image-single,
 .md-dialog-content .bg-image-single {
   background-size: cover;
-  background-position: center;
+  background-position: bottom;
   height: 600px;
 }
 .temp-product-detail .box-description-detail-product,
