add pyment purchase

--- a/app/css/base/variables.styl
+++ b/app/css/base/variables.styl
@@ -28,7 +28,7 @@ wShopCart = 100% //shopcart image size width
 /* font style */
 font-size = 15px
 fontClr = #555
-fontTitles = 'Josefin Sans', sans-serif
+fontTitles = 'poppins', sans-serif
 /* color sections */
 mainColor = white //color of nav
 footerTopClr = #ccc
