--- a/app/css/layout/layout.styl
+++ b/app/css/layout/layout.styl
@@ -427,3 +427,7 @@ footer
     &._md
       max-height 240px
       
+.purchase-payment-card
+  padding 15px
+  background-color #f5f5f5
+  border 1px solid #ddd
