--- a/app/templates/auth/purchase-detail.html
+++ b/app/templates/auth/purchase-detail.html
@@ -182,7 +182,7 @@
                                                                     <div class="col-sm-6">
                                                                         <md-input-container>
                                                                             <label>Especifique el monto que desea abonar</label>
-                                                                            <input type="text" id="cardholderName" data-checkout="cardholderName" ng-model="Purchase.purchase.payment.name" required>
+                                                                            <input type="text" id="cardholderName" data-checkout="cardholderName" ng-model="Purchase.purchase.amount" required>
                                                                             <div ng-messages="Purchase.purchase.name.$error" aria-live="assertive">
                                                                                 <!-- ngMessage: required -->
                                                                                 <div ng-message="required">Este campo es requerido.</div>
@@ -193,7 +193,7 @@
                                                                     <div class="col-sm-6">
                                                                             <md-input-container>
                                                                                 <label>Nombre completo</label>
-                                                                                <input type="text" id="cardholderName" data-checkout="cardholderName" ng-model="Purchase.purchase.payment.name" required>
+                                                                                <input type="text" id="cardholderName" data-checkout="cardholderName" ng-model="Purchase.purchase.name" required>
                                                                                 <div ng-messages="Purchase.purchase.name.$error" aria-live="assertive">
                                                                                     <!-- ngMessage: required -->
                                                                                     <div ng-message="required">Este campo es requerido.</div>
@@ -206,7 +206,7 @@
                                                                     <div class="col-md-6 no-pd-l">
                                                                         <md-input-container>
                                                                             <label id="email">Email</label>
-                                                                            <input type="email" name="email" ng-model="Purchase.purchase.payment.email" required>
+                                                                            <input type="email" name="email" ng-model="Purchase.purchase.email" required>
                                                                             <div ng-messages="Purchase.purchase.email.$error" aria-live="assertive">
                                                                                 <!-- ngMessage: required -->
                                                                                 <div ng-message="email">Se requiere de un email válido.</div>
@@ -219,7 +219,7 @@
                                                                         <md-input-container>
                                                                             <label>Teléfono</label>
                                                                             <input type="text" name="phone" ng-pattern="/^[0-9]*$/"
-                                                                                   md-maxlength="10" ng-model="SharePay.payment.phone" required>
+                                                                                   md-maxlength="10" ng-model="Purchase.purchase.phone" required>
                                                                             <div ng-messages="Purchase.purchase.phone.$error" aria-live="assertive">
                                                                                 <!-- ngMessage: required -->
                                                                                 <div ng-message="required">Este campo es requerido.</div>
@@ -237,11 +237,11 @@
                                                                                 <md-input-container>
                                                                                     <label>Número de tarjeta</label>
                                                                                     <input type="text" ng-pattern="/^[0-9]*$/"
-                                                                                            md-maxlength="18" id="cardNumber" data-checkout="cardNumber" ng-model="SharePay.payment.cardNumber" required>
+                                                                                            md-maxlength="16" id="cardNumber" data-checkout="cardNumber" ng-model="Purchase.purchase.cardNumber" required>
                                                                                     <div ng-messages="Purchase.purchase.cardNumber.$error" aria-live="assertive">
                                                                                         <!-- ngMessage: required -->
                                                                                         <div ng-message="required">Este campo es requerido.</div>
-                                                                                        <div ng-message="md-maxlength">Deben ser solo 18 dígitos.</div>
+                                                                                        <div ng-message="md-maxlength">Deben ser solo 16 dígitos.</div>
                                                                                         <div ng-message="pattern">Formato no válido.</div>
                                                                                         <!-- ngMessage: md-maxlength -->
                                                                                     </div>
