--- a/app/templates/auth/purchase-detail.html
+++ b/app/templates/auth/purchase-detail.html
@@ -182,8 +182,8 @@
                                                                     <div class="col-sm-6">
                                                                         <md-input-container>
                                                                             <label>Especifique el monto que desea abonar</label>
-                                                                            <input type="text" id="cardholderName" data-checkout="cardholderName" ng-model="Purchase.purchase.amount" required>
-                                                                            <div ng-messages="Purchase.purchase.name.$error" aria-live="assertive">
+                                                                            <input type="text" id="cardholderName"  ng-model="Purchase.purchase.amount" required>
+                                                                            <div ng-messages="payForm.amount.$error" aria-live="assertive">
                                                                                 <!-- ngMessage: required -->
                                                                                 <div ng-message="required">Este campo es requerido.</div>
                                                                                 <!-- ngMessage: md-maxlength -->
@@ -194,7 +194,7 @@
                                                                             <md-input-container>
                                                                                 <label>Nombre completo</label>
                                                                                 <input type="text" id="cardholderName" data-checkout="cardholderName" ng-model="Purchase.purchase.name" required>
-                                                                                <div ng-messages="Purchase.purchase.name.$error" aria-live="assertive">
+                                                                                <div ng-messages="payForm.name.$error" aria-live="assertive">
                                                                                     <!-- ngMessage: required -->
                                                                                     <div ng-message="required">Este campo es requerido.</div>
                                                                                     <!-- ngMessage: md-maxlength -->
@@ -207,7 +207,7 @@
                                                                         <md-input-container>
                                                                             <label id="email">Email</label>
                                                                             <input type="email" name="email" ng-model="Purchase.purchase.email" required>
-                                                                            <div ng-messages="Purchase.purchase.email.$error" aria-live="assertive">
+                                                                            <div ng-messages="payForm.email.$error" aria-live="assertive">
                                                                                 <!-- ngMessage: required -->
                                                                                 <div ng-message="email">Se requiere de un email válido.</div>
                                                                                 <div ng-message="required">Este campo es requerido.</div>
@@ -220,7 +220,7 @@
                                                                             <label>Teléfono</label>
                                                                             <input type="text" name="phone" ng-pattern="/^[0-9]*$/"
                                                                                    md-maxlength="10" ng-model="Purchase.purchase.phone" required>
-                                                                            <div ng-messages="Purchase.purchase.phone.$error" aria-live="assertive">
+                                                                            <div ng-messages="payForm.phone.$error" aria-live="assertive">
                                                                                 <!-- ngMessage: required -->
                                                                                 <div ng-message="required">Este campo es requerido.</div>
                                                                                 <div ng-message="md-maxlength">Deben ser solo 10 dígitos.</div>
@@ -237,11 +237,11 @@
                                                                                 <md-input-container>
                                                                                     <label>Número de tarjeta</label>
                                                                                     <input type="text" ng-pattern="/^[0-9]*$/"
-                                                                                            md-maxlength="16" id="cardNumber" data-checkout="cardNumber" ng-model="Purchase.purchase.cardNumber" required>
-                                                                                    <div ng-messages="Purchase.purchase.cardNumber.$error" aria-live="assertive">
+                                                                                            md-maxlength="19" id="cardNumber" data-checkout="cardNumber" ng-model="Purchase.purchase.cardNumber" required>
+                                                                                    <div ng-messages="payForm.cardNumber.$error" aria-live="assertive">
                                                                                         <!-- ngMessage: required -->
                                                                                         <div ng-message="required">Este campo es requerido.</div>
-                                                                                        <div ng-message="md-maxlength">Deben ser solo 16 dígitos.</div>
+                                                                                        <div ng-message="md-maxlength">Deben ser solo 19 dígitos.</div>
                                                                                         <div ng-message="pattern">Formato no válido.</div>
                                                                                         <!-- ngMessage: md-maxlength -->
                                                                                     </div>
@@ -263,7 +263,7 @@
                                                                                     <label>Mes</label>
                                                                                     <input type="text" md-maxlength="2" ng-pattern="/^[0-9]*$/"
                                                                                             ng-model="Purchase.purchase.month" id="cardExpirationMonth" data-checkout="cardExpirationMonth" required>
-                                                                                    <div ng-messages="Purchase.purchase.$error" aria-live="assertive">
+                                                                                    <div ng-messages="payForm.purchase.$error" aria-live="assertive">
                                                                                         <!-- ngMessage: required -->
                                                                                         <div ng-message="required">Este campo es requerido.</div>
                                                                                         <div ng-message="md-maxlength">Deben ser sólo dos dígitos.</div>
@@ -276,7 +276,7 @@
                                                                                     <label>Año</label>
                                                                                     <input type="text" md-maxlength="4" ng-pattern="/^[0-9]*$/"
                                                                                             ng-model="Purchase.purchase.payment.year" id="cardExpirationYear" data-checkout="cardExpirationYear" required>
-                                                                                    <div ng-messages="Purchase.purchase.year.$error" aria-live="assertive">
+                                                                                    <div ng-messages="payForm.year.$error" aria-live="assertive">
                                                                                         <!-- ngMessage: required -->
                                                                                         <div ng-message="required">Este campo es requerido.</div>
                                                                                         <div ng-message="md-maxlength">Deben ser sólo 4 dígitos.</div>
@@ -289,7 +289,7 @@
                                                                                     <label>CVC</label>
                                                                                     <input type="text" md-maxlength="4" ng-pattern="/^[0-9]*$/"
                                                                                             ng-minlength="3" id="securityCode" data-checkout="securityCode" ng-model="SharePay.payment.cvc" required>
-                                                                                    <div ng-messages="Purchase.purchase.cvc.$error" aria-live="assertive">
+                                                                                    <div ng-messages="payForm.cvc.$error" aria-live="assertive">
                                                                                         <!-- ngMessage: required -->
                                                                                         <div ng-message="required">Este campo es requerido.</div>
                                                                                         <div ng-message="md-maxlength">Deben ser sólo 3 o 4 dígitos.</div>
@@ -318,7 +318,7 @@
                                                                             <i class="fa fa-angle-left"></i> Regresar
                                                                         </button>
                                                                         <button title="Regresar a mis compras" class="btn btn-md btn-primary"
-                                                                            ng-click="Purchase.DoPayment = true">
+                                                                            ng-click="Purchase.processPaymentCard()">
                                                                             <i class="fa fa-cash"></i> Abonar
                                                                         </button>
                                                                     </div>
